    changed.
14. Remove space between toolbar and views, and reduce spacing elsewhere.
15. Use a 0-pixel splitter between playqueue and views.
16. Set 'no interaction' flag on more lables, so that Oxygen's window drag core
    works on these.
17. Add support for comments. These are read directly from the song file when
    the tag-editor is used, and they are NOT saved in Cantata's cache file.

1.3.2
-----
1. In cover/artist dialog, when attempting to save an image into Cantata's
   cache folder - ensure the 'covers' sub-folder is created.
2. When saving artist image from cover dialog, if set to save in MPD folder and
   song's path does not have 2 folder elements then save in cache folder.
   Cantata will only save artist images, and backdrops, in MPD folder if the
   folder structure is (e.g.) Artist/Album/Track.mp3
3. Use case-insensitive sort of folder view items when adding to playqueue.

1.3.1
-----
 1. Fix collapsed context-view selector buttons text when using a dark
    background.
 2. Apply some Fedora patches.
 3. Fix MPD HTTP stream playback.
 4. Fix painting of Gtk thin scrollbar style on comboboxes.
 5. When waiting for replies from MPD, use Qt's standard timeout value of 30showMopidyMessage
    While the socket is still connected, Cantata will wait up to 4 times the
    timeout value. Therefore, the actual timeout has increased to 2minutes!
 6. If a sidebar view has focus, but sidebar is collapsed, then find action
    should activate playqueue search widget.
 7. FreeBSD 10 compile fixes.
 8. Fix scaling of context view background when size of view changes.
 9. Elide text of context view selector buttons, if insufficient space.
10. Only show mopidy note in copy/remove dialog if connected to mopidy.
11. Fix broken en_GB translation.
12. Fix folder-view path parsing. If two folders only differed in the last
    character then Cantata would have placed the contents of the second
    into the listing of the first.
13. Explicitly link to pthread.